--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,7 @@
+main {
+  height: 100vh;
+  /* overflow: hidden; */
+}
 .coin-bubble {
   position: absolute;
 }
@@ -26,7 +30,9 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease;
 }
-
+.wrIndexer {
+  padding: 0 12px;
+}
 
 @keyframes bounce {
 
@@ -42,9 +48,14 @@
   }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 600px) {
+  button.exchange-submit {
+    margin-top: 10px;
+  }
+}
+@media only screen and (max-width: 768px) {
   .coin-bubble:first-child {
-    bottom: 10px;
+    display: none;
   }
   .coin-bubble:nth-child(2) {
     display: none;
